<resources>
    <string name="app_name">NConverter</string>
    <string name="ex_100">number</string>
    <string name="_10">10</string>
    <string name="base_result">base result</string>
    <string name="_2">2</string>
    <string name="enter_the_number_use_caps">Enter the number(use capital letter)</string>
    <string name="the_base_from">the base from</string>
    <string name="base_conversion_tool">BASE Conversion TOOL</string>
    <string name="convert">Convert</string>
</resources>